--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,6 @@
     <string name="cpassword">Confirm Password</string>
     <string name="pass">Password</string>
     <string name="number">Phone number</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="user">Username</string>
+
 </resources>
